[gd_scene load_steps=2 format=3 uid="uid://goedpovjux1f"]

[ext_resource type="Script" path="res://Menus/local_menu.gd" id="1_r7yq7"]

[node name="LocalMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7yq7")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(200, 175)
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 121.0
offset_bottom = 196.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Campaign" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../PriorMenu")
text = "Campaign - Coming Soon"
alignment = 0

[node name="Versus" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Versus ( WIP )"
alignment = 0

[node name="Stadium" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stadium - Coming Soon"
alignment = 0

[node name="Training" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Training Modes"
alignment = 0

[node name="PriorMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Campaign")
text = "â†µ Prior Menu"
alignment = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Campaign" to="." method="_on_campaign_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Versus" to="." method="_on_versus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Stadium" to="." method="_on_stadium_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Training" to="." method="_on_training_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PriorMenu" to="." method="_on_prior_menu_pressed"]
